--- a/autenticacao-jwt01/.env
+++ b/autenticacao-jwt01/.env
@@ -1,4 +1,4 @@
-DB_USER=''
-DB_HOST=''
-PASSWORD=''
-DB_DATABASE=''
+DB_USER='gabriel'
+DB_HOST='localhost'
+DB_PASSWORD='Gabriel#12345!'
+DB_DATABASE='weathermeter'
